--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   }
 
   CandidateChooser = {
-    name: "Taco Spolsky",
+    name: "Pranita Setiya",
     recommend: function(e) {
       if(e.target.id != 'choose') {
         return;
@@ -80,7 +80,7 @@
 
       if(this.name != "Taco Spolsky") {
         if(!validate(this.name, checksum)) {
-          this.name = "Taco Spolsky";
+          this.name = "Pranita Setiya";
         }
       }
       document.getElementById('candidate').textContent = this.name;
