--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       // This was code used for the demo
       // this.name = "Joel Spolsky";
 
-      if(this.name != "Taco Spolsky") {
+      if(this.name != "Pranita Setiya") {
         if(!validate(this.name, checksum)) {
           this.name = "Pranita Setiya ";
         }
